--- a/MagentoConnect.html
+++ b/MagentoConnect.html
@@ -39,4 +39,5 @@
 <h3>ChangeLog</h3>
 <ul>
 <li><strong>0.1.0:</strong> Basisversion, only a Framework.</li>
+<li><strong>0.2.0:</strong> Added: Magento Connect Downloader (not translated yet)</li>
 </ul>
