--- a/MagentoConnect.html
+++ b/MagentoConnect.html
@@ -40,4 +40,5 @@
 <ul>
 <li><strong>0.1.0:</strong> Basisversion, only a Framework.</li>
 <li><strong>0.2.0:</strong> Added: Magento Connect Downloader (not translated yet)</li>
+<li><strong>0.3.0:</strong> Added: TinyMCE Editor (not translated yet)</li>
 </ul>
