--- a/MagentoConnect.html
+++ b/MagentoConnect.html
@@ -41,4 +41,5 @@
 <li><strong>0.1.0:</strong> Basisversion, only a Framework.</li>
 <li><strong>0.2.0:</strong> Added: Magento Connect Downloader (not translated yet)</li>
 <li><strong>0.3.0:</strong> Added: TinyMCE Editor (not translated yet)</li>
+<li><strong>0.3.9:</strong> Added: Three static blocks to the E-Mail-Templates</li>
 </ul>
