--- a/MagentoConnect.html
+++ b/MagentoConnect.html
@@ -43,4 +43,5 @@
 <li><strong>0.3.0:</strong> Added: TinyMCE Editor (not translated yet)</li>
 <li><strong>0.3.9:</strong> Added: Three static blocks to the E-Mail-Templates</li>
 <li><strong>0.4.0:</strong> Update: Missing files/templates (Magento v1.9.3.7)</li>
+<li><strong>0.5.0:</strong> Update: Missing entries and translations (Magento v1.9.3.7)</li>
 </ul>
