--- a/MagentoConnect.html
+++ b/MagentoConnect.html
@@ -44,4 +44,5 @@
 <li><strong>0.3.9:</strong> Added: Three static blocks to the E-Mail-Templates</li>
 <li><strong>0.4.0:</strong> Update: Missing files/templates (Magento v1.9.3.7)</li>
 <li><strong>0.5.0:</strong> Update: Missing entries and translations (Magento v1.9.3.7)</li>
+<li><strong>0.5.1:</strong> Update: More missing entries and translations (Magento v1.9.3.7)</li>
 </ul>
