--- a/MagentoConnect.html
+++ b/MagentoConnect.html
@@ -46,4 +46,6 @@
 <li><strong>0.5.0:</strong> Update: Missing entries and translations (Magento v1.9.3.7)</li>
 <li><strong>0.5.1:</strong> Update: More missing entries and translations (Magento v1.9.3.7)</li>
 <li><strong>0.5.2:</strong> Update: Actualisations and improvements of translation</li>
+<li><strong>0.5.3:</strong> Updated: Upgraded for Magento Version 1.9.3.10</li>
+<li><strong>1.0.0:</strong> Updated: Upgraded for Magento Version 1.9.4.x</li>
 </ul>
