--- a/MagentoConnect.html
+++ b/MagentoConnect.html
@@ -48,4 +48,5 @@
 <li><strong>0.5.2:</strong> Update: Actualisations and improvements of translation</li>
 <li><strong>0.5.3:</strong> Updated: Upgraded for Magento Version 1.9.3.10</li>
 <li><strong>1.0.0:</strong> Updated: Upgraded for Magento Version 1.9.4.x</li>
+<li><strong>1.1.0:</strong> Updated: Upgraded for Magento Version 1.9.4.2</li>
 </ul>
